<resources>
    <string name="app_name">ExpenseTracker</string>
    <string name="title_home">Home</string>
    <string name="title_manage">Manage</string>
    <string name="title_charts">Charts</string>

    <string name="Exp">Expense</string>
    <string name="EXPS">EXPENSES</string>
    <string name="CAT">CATEGORY</string>
    <string name="CATS">CATEGORIES</string>
    <string name="ACC">ACCOUNT</string>
    <string name="ACCS">ACCOUNTS</string>
    <string name="Cat">Category</string>
    <string name="Acc">Account</string>
    <string name="cat">category</string>
    <string name="acc">account</string>

    <string name="default_currency">SGD</string>
    <string name="key_default_currency">default_currency</string>
    <string name="key_default_firstDayOfWeek">default_firstDayOfWeek</string>

    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="from">FROM</string>
    <string name="to">TO</string>
    <string name="sel_single">Date</string>
    <string name="sel_range">Range</string>

    <string name="hint_amt">0.00</string>
    <string name="hint_name">Name</string>
    <string name="hint_description">Description</string>

    <string name="opt_del">Delete</string>
    <string name="opt_date">Date</string>
    <string name="opt_save">Save</string>
    <string name="opt_update">Refresh</string>

    <string name="example_cat">Food</string>
    <string name="example_acc">Cash</string>
    <string name="example_date">10 JAN 2022</string>
    <string name="example_date_full">YESTERDAY, 10 JAN 2022</string>
    <string name="example_amt">135.00</string>
    <string name="example_no">15</string>
    <string name="example_receipt_item">JS THAI GREEN &amp; RICE</string>

    <string name="charts_frag_cat">Categories</string>
    <string name="charts_frag_time">Monthly</string>
    <string name="charts_frag_cal">Calendar</string>
    <string name="app_widget_description">Quick add expense</string>

    <string name="default_fdow_title">First day of week</string>
    <string name="default_curr_title">Default currency</string>
    <string name="set_xrate_title">%1$s to currency</string>
    <string name="action_import">Import</string>
    <string name="action_export">Export</string>
    <string name="action_export_csv">Export to CSV</string>
    <string name="action_xrate">Set exchange rate</string>

<!--    ChartsChildFragment-->
    <string name="filter_dialog_title">FILTER BY %1$s</string>
    <string name="full_date">%1$s, %2$s</string>
    <string name="date_range">%1$s - %2$s</string>
    <string name="view_expenses">VIEW EXPENSES</string>

<!--    SectionAdapter-->
    <string name="new_acc_placeholder">Add account</string>

<!--    MainActivity-->
    <string name="new_acc_title">New account</string>
    <string name="new_cat_title">New category</string>
    <string name="multiple">Multiple</string>
    <string name="photo_dialog_title">Select photo</string>
    <string name="camera_opt">Take\nphoto</string>
    <string name="gallery_opt">Choose\nimage</string>

<!--    Searchable-->
    <string name="search_hint">Search expense</string>
    <string name="no_expenses">No expenses</string>

</resources>