<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/receiptItemLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <ImageButton
        android:id="@+id/receiptItemCat"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/shape_circle_border_transparent"
        android:backgroundTint="@null"
        android:foreground="@null"
        android:foregroundTint="@color/white"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/receiptItemCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:textSize="12sp"
            android:fontFamily="sans-serif"
            android:textFontWeight="600"
            android:text="@string/default_currency"
            android:textColor="@color/text_light_gray" />

        <EditText
            android:id="@+id/receiptItemAmt"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:importantForAutofill="no"
            android:background="@null"
            android:hint="@string/hint_amt"
            android:text="@string/example_amt"
            android:textColor="@color/text_dark_gray"
            android:textSize="14sp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/receiptItemDesc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/receiptItemCat"
        android:layout_toStartOf="@id/linearLayout"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/example_receipt_item" />

</RelativeLayout>