<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="160dp"
    android:layout_height="80dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="24dp"
    android:background="@drawable/shape_rounded_rectangle_top_border">

    <!--border-->
    <View
        android:id="@+id/border"
        android:layout_width="5dp"
        android:layout_height="match_parent"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent" />

    <!--name-->
    <TextView
        android:id="@+id/catDataLabel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/example_cat"
        app:layout_constraintBottom_toBottomOf="@id/catDataIcon"
        app:layout_constraintStart_toEndOf="@id/border" />

    <!--num_expenses-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:gravity="center|start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/catDataLabel">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginEnd="3dp"
            android:background="@drawable/ic_baseline_receipt_24" />

        <TextView
            android:id="@+id/catDataNumExpenses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_no"
            android:textSize="12sp" />

    </LinearLayout>

    <!--amount-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="5dp"
        android:gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/catDataCurr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:fontFamily="sans-serif"
            android:text="@string/default_currency"
            android:textColor="@color/text_light_gray"
            android:textFontWeight="600"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/catDataAmt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:singleLine="true"
            android:text="@string/example_amt"
            android:textColor="@color/text_dark_gray"
            android:textFontWeight="600"
            android:textSize="18sp" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/catDataIconBg"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/shape_circle"
        android:backgroundTint="@color/black"
        android:clickable="false"
        android:scaleType="fitCenter"
        android:src="@drawable/selector_circle"
        android:translationX="10dp"
        android:translationY="-10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
            android:id="@+id/catDataIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:foreground="@drawable/cat_food"
            android:foregroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>