<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/expenseRow"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:layout_marginTop="-11dp"
    android:layout_marginBottom="10dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="@drawable/shape_rounded_rectangle_border"
        android:background="?selectableItemBackground"
        android:orientation="horizontal"
        android:padding="15dp"
        android:baselineAligned="false"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/expDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:paddingEnd="10dp"
                android:singleLine="true"
                android:text="@string/hint_description"
                android:fontFamily="sans-serif-medium"
                android:textFontWeight="500"
                android:textColor="@color/text_dark_gray"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/expCatIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/shape_circle"
                    android:backgroundTint="@color/cat_amour"
                    android:clickable="false"
                    android:foreground="@drawable/cat_food"
                    android:foregroundTint="@color/white" />

                <TextView
                    android:id="@+id/expCatName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cat"
                    android:textColor="@color/text_light_gray" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/expAccName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/acc"
                android:textColor="@color/text_light_gray" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:textSize="12sp"
                    android:fontFamily="sans-serif"
                    android:textFontWeight="600"
                    android:text="@string/currency"
                    android:textColor="@color/text_light_gray" />

                <TextView
                    android:id="@+id/expAmt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_amt"
                    android:fontFamily="sans-serif-black"
                    android:textFontWeight="600"
                    android:textColor="@color/text_dark_gray"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>