<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/expPopup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/sectionBanner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/cat_amour"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/catType"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Cat"
                    android:textColor="#fff" />

                <EditText
                    android:id="@+id/sectionName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:singleLine="true"
                    android:text="@string/example_cat"
                    android:textColor="#fff"
                    android:textSize="30sp"
                    android:inputType="textCapSentences"
                    android:importantForAutofill="no"
                    app:backgroundTint="@color/text_light_gray" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <ImageButton
                    android:id="@+id/sectionIcon"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/shape_circle"
                    android:backgroundTint="@color/white"
                    android:clickable="false"
                    android:foreground="@drawable/cat_food"
                    android:foregroundTint="@color/cat_amour"
                    android:scaleType="fitCenter"
                    android:src="@drawable/selector_circle" />

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/sectionCurrencyRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="-1dp"
            android:layout_marginEnd="-1dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/shape_rectangle_border"
            android:foreground="?selectableItemBackground"
            android:clickable="true">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="15dp"
                android:textColor="@color/generic_icon_gray"
                android:text="Currency:"/>

            <TextView
                android:id="@+id/sectionCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="20dp"
                android:textColor="@color/generic_icon_gray"
                android:textSize="16sp"
                android:text="@string/default_currency"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/expEditOptions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:gravity="center"
                android:background="@color/white"
                android:baselineAligned="false">

                <LinearLayout
                    android:id="@+id/catDelBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:clickable="false"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/selector_circle"
                        android:scaleType="fitCenter"
                        android:background="@drawable/shape_circle"
                        android:backgroundTint="#fcd0cb"
                        android:foreground="@drawable/action_delete"
                        android:foregroundTint="@color/red" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_mid_gray"
                        android:layout_marginTop="3dp"
                        android:text="@string/opt_del" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <LinearLayout
                    android:id="@+id/catSaveBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:clickable="false"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/selector_circle"
                        android:scaleType="fitCenter"
                        android:background="@drawable/shape_circle"
                        android:backgroundTint="#cfd3eb"
                        android:foreground="@drawable/action_check"
                        android:foregroundTint="#4f54a7" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_mid_gray"
                        android:layout_marginTop="3dp"
                        android:text="@string/opt_save" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>